--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
-    <title>王咏晗的网站</title>
+    <title>个人网站</title>
     <style>
         body {
             margin: 0;
@@ -11,8 +12,8 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-color: #f2f2f2;
             font-family: 'Arial', sans-serif;
+            animation: gradientAnimation 15s ease infinite alternate; /* Add animation to the body */
         }
 
         .header {
@@ -29,7 +30,7 @@
             background-color: #fff;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
             position: relative;
-            /* 让图片相对于这个容器定位 */
+            border-radius: 8px;
         }
 
         h1 {
@@ -37,15 +38,17 @@
         }
 
         h2 {
-            color: #666;
+            color: #333;
         }
 
         select {
-            padding: 8px;
+            padding: 10px;
             font-size: 16px;
             margin-bottom: 20px;
             border: 1px solid #ccc;
             border-radius: 4px;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         p {
@@ -55,7 +58,6 @@
 
         #homePage {
             display: none;
-            /* 隐藏主页内容 */
         }
 
         #navBar {
@@ -79,35 +81,42 @@
             top: 40px;
             left: 0;
             width: 100%;
+            border-radius: 4px;
         }
 
         #navContent p {
             margin: 5px 0;
             cursor: pointer;
         }
+        @keyframes gradientAnimation {
+            0% {
+                background: linear-gradient(45deg, #ffcccb, #b19cd9, #77dd77, #aec6cf);
+            }
+
+            100% {
+                background: linear-gradient(45deg, #aec6cf, #77dd77, #b19cd9, #ffcccb);
+            }
+        }
     </style>
 </head>
 <body>
-
     <div class="header">
         <h1>自我介绍</h1>
     </div>
-
     <div class="container">
 
         <h2>欢迎访问我的网页！</h2>
-        <p>我是王咏晗，一个AI工程师（预定），专业从事图像处理。在这个网页上，你可以了解到关于我的一些基本信息和经历。</p>
+        <p>我是，一个AI工程师（预定），专业从事图像处理。在这个网页上，你可以了解到关于我的一些基本信息和经历。</p>
 
         <label for="selectPage">选择页面：</label>
         <select id="selectPage" onchange="navigateToPage(this)">
             <option value="#">请选择页面</option>
-            <option value="my life.html">简历</option>
+            <option value="my_life.html">简历</option>
             <option value="introduction.html">个人生平</option>
             <option value="work.html">完成项目</option>
             <option value="suggest.html">建议反馈</option>
         </select>
     </div>
-
     <script>
         function navigateToPage(selObj) {
             var selectedValue = selObj.options[selObj.selectedIndex].value;
@@ -121,7 +130,5 @@
             navContent.style.display = (navContent.style.display === 'block') ? 'none' : 'block';
         }
     </script>
-
 </body>
-
 </html>
