--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         <label for="selectPage">选择页面：</label>
         <select id="selectPage" onchange="navigateToPage(this)">
             <option value="#">请选择页面</option>
-            <option value="my_life.html">简历</option>
+            <option value="my life.html">简历</option>
             <option value="introduction.html">个人生平</option>
             <option value="work.html">完成项目</option>
             <option value="suggest.html">建议反馈</option>
